--- a/assets/main.css
+++ b/assets/main.css
@@ -10,7 +10,7 @@
         --color-text-inverted: 79, 70, 229;
         --color-primary: 74, 70, 51;
         --color-secondary: 202, 165, 25;
-        --color-button-accent: 255, 255, 255;
+        --color-secondary-accent: 255, 165, 0;
         --color-button-accent-hover: 238, 242, 255;
         --color-button-muted: 99, 102, 241;
     }
