krypto page added

--- a/assets/main.css
+++ b/assets/main.css
@@ -11,6 +11,7 @@
         --color-primary: 74, 70, 51;
         --color-secondary: 202, 165, 25;
         --color-secondary-accent: 255, 165, 0;
+        --color-tertiary: 36, 37, 45;
         --color-button-accent-hover: 238, 242, 255;
         --color-button-muted: 99, 102, 241;
     }
