--- a/assets/main.css
+++ b/assets/main.css
@@ -12,6 +12,7 @@
         --color-secondary: 202, 165, 25;
         --color-secondary-accent: 255, 165, 0;
         --color-tertiary: 36, 37, 45;
+        --color-tertiary-accent: 0, 186, 124;
         --color-button-accent-hover: 238, 242, 255;
         --color-button-muted: 99, 102, 241;
     }
